<resources>
    <string name="app_name">Mis restaurantes</string>
    <string name="title_activity_maps1">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_maps3">Map</string>
    <string name="title_activity_maps4">Map</string>
    <string name="bienvenido_a_mis_restaurantes">Bienvenido a mis restaurantes</string>
    <string name="sede_principal">Sede Principal</string>
    <string name="sede_niquia">Sede Niquía</string>
    <string name="sede_envigago">Sede Envigago</string>
    <string name="sede_itagui">Sede Itagüí</string>
</resources>